rails g scaffold order user:references address:references quantity:integer cost:float

--- a/app/views/stickers/order.html.haml
+++ b/app/views/stickers/order.html.haml
@@ -15,3 +15,4 @@
     = f.label :city
     = f.text_field :city
 
+  %iframe{ src: 'https://coinbase.com/inline_payments/4152b4b9e7404cbae8d655beec9f4323?c=kitten', style: 'width: 500px; height: 160px; border: none; box-shadow: 0 1px 3px rgba(0,0,0,0.25); overflow: hidden;', allowtransparency: true, frameborder: 0 }
